--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,11 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+Intermediate
+.vs
+*debug*
+*.sln
+ExamGame/App/Probs/Datas/*
+*English*
+ExamGame/App/Probs/past/*
